# AgentsIA_LangGraph

./: .gitignore  README.md  langgraph.json  pyproject.toml  setup_ollama.md
notebooks/: 01-notebook.ipynb  02-simple.ipynb  03-messages.ipynb  04-llm.ipynb  05-rag.ipynb  06-chaining.ipynb  07-structured_output.ipynb  09-prompting.ipynb
src/agents/: main.py  simple.py
src/agents/support/: agent.py  state.py
src/agents/support/nodes/conversation/: node.py  promp.py  tools.py
src/agents/support/nodes/extractor/: node.py  promp.py
src/scripts/: init_vector_store.py
